--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- minimum-scale - 允许用户缩放到的最小比例 -->
+    <!-- maximum-scale – 允许用户缩放到的最大比例 -->
+    <!-- user-scalable – 用户是否可以手动缩放 -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0">
+    <!-- 忽略将数字变为电话号码 -->
+    <meta content="telephone=no" name="format-detection">
+    <!-- IOS中Safari允许全屏浏览 -->
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <!-- IOS中Safari顶端状态条样式 -->
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <title>vue-music</title>
   </head>
   <body>
